//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  fullname String
  username String [unique, not null]
  email String [unique, not null]
  phone String [unique]
  passwordHash String
  avatarUrl String
  createdAt DateTime [default: `now()`, not null]
  createdConversations Conversation [not null]
  authProviders AuthProvider [not null]
  participants ConversationParticipant [not null]
  messages Message [not null]
  statuses MessageStatus [not null]
  mentions MessageMention [not null]
  emotions MessageEmotion [not null]
}

Table AuthProvider {
  id String [pk]
  user User [not null]
  userId String [not null]
  provider String [not null]
  providerUserId String [not null]
  accessToken String
  refreshToken String
  connectedAt DateTime [default: `now()`, not null]

  indexes {
    (provider, providerUserId) [unique]
  }
}

Table Conversation {
  id String [pk]
  name String
  isGroup Boolean [not null, default: false]
  createdById String
  createdBy User
  createdAt DateTime [default: `now()`, not null]
  participants ConversationParticipant [not null]
  messages Message [not null]
}

Table ConversationParticipant {
  id String [pk]
  conversation Conversation [not null]
  conversationId String [not null]
  user User [not null]
  userId String [not null]
  role String [not null, default: 'member']
  joinedAt DateTime [default: `now()`, not null]

  indexes {
    (conversationId, userId) [unique]
  }
}

Table Message {
  id String [pk]
  conversation Conversation [not null]
  conversationId String [not null]
  sender User [not null]
  senderId String [not null]
  messageType String [not null, default: 'text']
  content String
  replyToId String
  replyTo Message
  replies Message [not null]
  isDeleted Boolean [not null, default: false]
  isRecalled Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  statuses MessageStatus [not null]
  mentions MessageMention [not null]
  emotions MessageEmotion [not null]
}

Table MessageStatus {
  id String [pk]
  message Message [not null]
  messageId String [not null]
  user User [not null]
  userId String [not null]
  status String [not null, default: 'delivered']
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (messageId, userId) [unique]
  }
}

Table MessageMention {
  id String [pk]
  message Message [not null]
  messageId String [not null]
  mentionedUser User [not null]
  mentionedUserId String [not null]
}

Table MessageEmotion {
  id String [pk]
  message Message [not null]
  messageId String [not null]
  user User [not null]
  userId String [not null]
  emoji String [not null]
  reactedAt DateTime [default: `now()`, not null]

  indexes {
    (messageId, userId, emoji) [unique]
  }
}

Ref: AuthProvider.userId > User.id

Ref: Conversation.createdById > User.id

Ref: ConversationParticipant.conversationId > Conversation.id

Ref: ConversationParticipant.userId > User.id

Ref: Message.conversationId > Conversation.id

Ref: Message.senderId > User.id

Ref: Message.replyToId - Message.id

Ref: MessageStatus.messageId > Message.id

Ref: MessageStatus.userId > User.id

Ref: MessageMention.messageId > Message.id

Ref: MessageMention.mentionedUserId > User.id

Ref: MessageEmotion.messageId > Message.id

Ref: MessageEmotion.userId > User.id